# aca-proj15

./: CMakeLists.txt  README.md  ReadFile.h  TestOpenMP.h  data.csv  dataTest.csv  initialWeightHO.csv  initialWeightIH.csv  main.c  parallel.c  parallel.h  readData.c  readData.h  readFile.c  readFile.h  readInitialWeight.c  readInitialWeight.h  seriale.c  seriale.h  serialeTest.c  serialeTest.h  structData.h  test.c  test.h
